--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Верстка тестового макета [fusely](https://www.figma.com/community/file/1046774226276680836)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,8 @@
   },
   "homepage": "https://github.com/lobovskiy/test-layout-fusely#readme",
   "devDependencies": {
-    "path": "^0.12.7",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-cli": "^4.9.1"
   }
 }
